// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> check TextArea renders properly with default props 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <textarea
    className="form-control"
    id="testname"
    name="testname"
    onChange={[MockFunction]}
    value=""
  />
</div>
`;

exports[`<TextArea /> check TextArea renders properly with error 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <textarea
    className="form-control"
    id="testname"
    name="testname"
    onChange={[MockFunction]}
    value=""
  />
  <div
    className="alert alert-danger"
  >
    Test error
  </div>
</div>
`;

exports[`<TextArea /> check TextArea renders properly with value provided 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="testname"
  >
    Test label
  </label>
  <textarea
    className="form-control"
    id="testname"
    name="testname"
    onChange={[MockFunction]}
    value="Test value"
  />
</div>
`;
